fix: remove z-index to fix stacking context and contrast issue | oh

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -30,7 +30,7 @@
       </p-button>
     </div>
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-sm min-h-full">
-      <div class="grid content-start m-static-md mt-static-md z-0 ">
+      <div class="grid content-start m-static-md mt-static-md">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
         <p-text theme="dark" size="x-large">Good to see you. </p-text>
         <p-text theme="dark" size="x-large">How can I assist you?</p-text>
@@ -74,7 +74,7 @@
       </p-button>
     </div>
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-sm min-h-full">
-      <div class="grid content-start m-static-md mt-static-md z-0 ">
+      <div class="grid content-start m-static-md mt-static-md">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
         <p-text theme="dark" size="x-large" tag="h2">Good to see you. </p-text>
         <p-text theme="dark" size="x-large" tag="h2">How can I assist you?</p-text>
@@ -146,7 +146,7 @@
           Some label
         </p-button>
       </div>
-      <div class="grid gap-static-lg z-0 px-static-md" role="log" aria-label="AI chat log">
+      <div class="grid gap-static-lg px-static-md" role="log" aria-label="AI chat log">
         <div class="c-question">
           <p-text theme="dark">How does your loading indicator look like while computing answers?</p-text>
         </div>
@@ -421,7 +421,7 @@
         Some label
       </p-button>
     </div>
-    <div class="my-static-xl mx-static-lg grid gap-fluid-sm z-0">
+    <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
       <p-text theme="dark" size="large" tag="h2">My inquiries</p-text>
       <div class="my-static-md grid gap-static-md">
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What current Porsche models are there?</p-link-pure>
@@ -442,7 +442,7 @@
         Some label
       </p-button>
     </div>
-    <div class="my-static-xl mx-static-lg grid gap-fluid-sm z-0">
+    <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
       <p-heading theme="dark" size="medium" tag="h2">Porsche Experience Center<br />Hockenheimring</p-heading>
       <p-text theme="dark">Am Motodrom 9-11<br />68766 Hockenheim</p-text>
       <div class="my-static-md grid gap-fluid-sm justify-items-start">
@@ -468,7 +468,7 @@
         Some label
       </p-button>
     </div>
-    <div class="my-static-xl mx-static-lg grid gap-fluid-sm z-0">
+    <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
       <p-heading theme="dark" size="medium" tag="h2">AI Assistant Disclaimer</p-heading>
       <p-heading theme="dark" size="small" tag="h3">General Information:</p-heading>
       <p-text theme="dark">The AI chatbot is an automated system powered by OpenAI. It is designed to provide information and assistance based on the public Tamr documentation. While we strive to provide accurate information through the AI chatbot, we cannot guarantee the accuracy, completeness, or up-to-date nature of the information provided. We recommend that you use responses as a starting point and verify the information in the linked public documentation sources.</p-text>
