fix: a11y contrast issues | oh

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -423,7 +423,7 @@
     </div>
     <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
       <p-text theme="dark" size="large" tag="h2">My inquiries</p-text>
-      <div class="my-static-md grid gap-static-md">
+      <div class="my-static-md grid gap-static-md z-1">
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What current Porsche models are there?</p-link-pure>
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What are the differences between the Taycan and 911?</p-link-pure>
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What customization options do I have for the 718 Cayman?</p-link-pure>
@@ -445,7 +445,7 @@
     <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
       <p-heading theme="dark" size="medium" tag="h2">Porsche Experience Center<br />Hockenheimring</p-heading>
       <p-text theme="dark">Am Motodrom 9-11<br />68766 Hockenheim</p-text>
-      <div class="my-static-md grid gap-fluid-sm justify-items-start">
+      <div class="my-static-md grid gap-fluid-sm justify-items-start z-1">
         <p-link-pure theme="dark" href="tel:+4971191132900" icon="phone">+49 (0)711 911 32900</p-link-pure>
         <p-link-pure theme="dark" href="mailto:info@porsche.de" icon="email">info@porsche.de</p-link-pure>
       </div>
