test: update screenshots | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -32,8 +32,8 @@
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-md min-h-full">
       <div class="grid content-start m-static-md mt-static-md opacity-0 animate-slide-up-fade">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
-        <p-text theme="dark" size="x-large">Good to see you. </p-text>
-        <p-text theme="dark" size="x-large">How can I assist you?</p-text>
+        <h2 class="prose-heading-xl font-normal">Good to see you.</h2>
+        <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
         <a href="#" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
@@ -67,8 +67,8 @@
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-md min-h-full">
       <div class="grid content-start m-static-md mt-static-md opacity-0 animate-slide-up-fade">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
-        <p-text theme="dark" size="x-large">Good to see you. </p-text>
-        <p-text theme="dark" size="x-large">How can I assist you?</p-text>
+        <h2 class="prose-heading-xl font-normal">Good to see you.</h2>
+        <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
         <a href="#" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
