feat: safari gradient fix | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -36,15 +36,15 @@
         <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
-        <a href="#" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="medium">My car is not starting</p-text>
         </a>
-        <a href="#" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="small">I lost my charging card</p-text>
         </a>
-        <a href="#" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="small">I want to go on a trip to Switzerland</p-text>
         </a>
@@ -71,15 +71,15 @@
         <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
-        <a href="#" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="medium">My car is not starting</p-text>
         </a>
-        <a href="#" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="small">I lost my charging card</p-text>
         </a>
-        <a href="#" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
           <p-text theme="dark" size="small">I want to go on a trip to Switzerland</p-text>
         </a>
