feat: fixed lh issues | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -405,7 +405,7 @@
       </p-button>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
-      <p-text theme="dark" size="large" tag="h2">My inquiries</p-text>
+      <h2 class="prose-heading-lg font-normal">My inquiries</h2>
       <div class="my-static-md grid gap-static-md z-1">
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What current Porsche models are there?</p-link-pure>
         <p-link-pure theme="dark"  href="#template-chat" icon="chat">What are the differences between the Taycan and 911?</p-link-pure>
@@ -426,7 +426,8 @@
       </p-button>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
-      <p-heading theme="dark" size="medium" tag="h2">Porsche Experience Center<br />Hockenheimring</p-heading>
+      <h2 class="prose-heading-lg font-normal">Porsche Experience Center<br />Hockenheimring</h2>
+
       <p-text theme="dark">Am Motodrom 9-11<br />68766 Hockenheim</p-text>
       <div class="my-static-md grid gap-fluid-sm justify-items-start z-1">
         <p-link-pure theme="dark" href="tel:+4971191132900" icon="phone">+49 (0)711 911 32900</p-link-pure>
@@ -452,7 +453,7 @@
       </p-button>
     </div>
     <div class="my-static-xl mx-static-lg grid gap-fluid-sm">
-      <p-heading theme="dark" size="medium" tag="h2">AI Assistant Disclaimer</p-heading>
+      <h2 class="prose-heading-lg font-normal">AI Assistant Disclaimer</h2>
       <p-heading theme="dark" size="small" tag="h3">General Information:</p-heading>
       <p-text theme="dark">The AI chatbot is an automated system powered by OpenAI. It is designed to provide information and assistance based on the public Tamr documentation. While we strive to provide accurate information through the AI chatbot, we cannot guarantee the accuracy, completeness, or up-to-date nature of the information provided. We recommend that you use responses as a starting point and verify the information in the linked public documentation sources.</p-text>
       <p-heading theme="dark" size="small" tag="h3">User Responsibility:</p-heading>
