feat: fixed lh issues | jmn

--- a/src/ai-assistant-widget/index.html
+++ b/src/ai-assistant-widget/index.html
@@ -32,21 +32,20 @@
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-md min-h-full">
       <div class="grid content-start m-static-md mt-static-md opacity-0 animate-slide-up-fade">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
-        <h2 class="prose-heading-xl font-normal">Good to see you.</h2>
-        <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
+        <h1 class="prose-heading-xl font-normal" >Good to see you.<br />How can I assist you?</h1>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
-        <a href="#template-chat" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="text-md col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="medium">My car is not starting</p-text>
+          My car is not starting
         </a>
-        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="text-sm bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="small">I lost my charging card</p-text>
+          I lost my charging card
         </a>
         <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="small">I want to go on a trip to Switzerland</p-text>
+          I want to go on a trip to Switzerland
         </a>
       </div>
       <div class="c-footer dark:bg-surface rounded-3xl px-static-md pt-static-md">
@@ -67,21 +66,20 @@
     <div class="grid grid-rows-[minmax(0,1fr)_auto_auto] gap-fluid-md min-h-full">
       <div class="grid content-start m-static-md mt-static-md opacity-0 animate-slide-up-fade">
         <p-icon class="mb-static-md" theme="dark" source="/templates/assets/ai.svg" size="x-large"></p-icon>
-        <h2 class="prose-heading-xl font-normal">Good to see you.</h2>
-        <h2 class="prose-heading-xl font-normal">How can I assist you?</h2>
+        <h1 class="prose-heading-xl font-normal" >Good to see you.<br />How can I assist you?</h1>
       </div>
       <div class="grid grid-cols-2 grid-rows-2 gap-static-sm m-static-xs">
-        <a href="#template-chat" class="col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="text-md col-span-1 row-span-2 bg-frosted rounded-3xl p-static-md min-h-[280px] opacity-0 translate-y-[20px] animate-slide-up-fade delay-100 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="medium">My car is not starting</p-text>
+          My car is not starting
         </a>
-        <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
+        <a href="#template-chat" class="text-sm bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-300 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="small">I lost my charging card</p-text>
+          I lost my charging card
         </a>
         <a href="#template-chat" class="bg-frosted rounded-3xl p-static-md opacity-0 translate-y-[20px] animate-slide-up-fade delay-500 flex flex-col justify-between focus-visible:outline outline-focus outline-offset-[-2px] hover:bg-frosted">
           <p-icon theme="dark" name="arrow-up" size="medium" class="self-end rotate-45"></p-icon>
-          <p-text theme="dark" size="small">I want to go on a trip to Switzerland</p-text>
+          I want to go on a trip to Switzerland
         </a>
       </div>
 
